<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="手机号"
                android:id="@+id/textView3"
                android:layout_column="0"
                style="@style/BilllistText"
                android:layout_height="40dp"
                android:layout_weight="0.3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumString"
                android:id="@+id/PhoneNuminBill"
                android:layout_column="1"
                style="@style/BillListRight"
                android:layout_weight="0.7"
                android:textAlignment="textEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="历年欠费总额"
                android:id="@+id/textView5"
                android:layout_column="0"
                style="@style/BilllistText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastYear"
                android:id="@+id/LastYear"
                android:layout_column="1"
                style="@style/BillListRight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:id="@+id/textView6"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="本年未缴费次数"
                android:id="@+id/textView7"
                android:layout_column="0"
                style="@style/BilllistText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeDelay"
                android:id="@+id/Timedelay"
                android:layout_column="1"
                style="@style/BillListRight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="次"
                android:id="@+id/textView8"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:singleLine="true"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="本月通话时间"
                android:id="@+id/textView9"
                android:layout_column="0"
                style="@style/BilllistText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callTime"
                android:id="@+id/phonecalltime"
                android:layout_column="1"
                style="@style/BillListRight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="min"
                android:id="@+id/textView10"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="总计"
                android:id="@+id/textView11"
                android:layout_column="0"
                style="@style/BilllistText"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/total"
                android:id="@+id/MoneyTopay"
                android:layout_column="1"
                style="@style/BillListRight"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:id="@+id/textView12"
                android:layout_column="2"
                android:textColor="@color/colorAccent"
                android:textAlignment="textEnd" />
        </TableRow>
    </TableLayout>
</LinearLayout>
